Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 80
      - path: /service3
        pathType: Prefix
        backend:
          service:
            name: service3
            port:
              number: 80
      - path: /service4
        pathType: Prefix
        backend:
          service:
            name: service4
            port:
              number: 80
      - path: /service5
        pathType: Prefix
        backend:
          service:
            name: service5
            port:
              number: 80
